--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
     <h1>Movie Showtimes<span id="last-updated" class="last-updated"></span><span id="next-refresh" class="next-refresh"></span></h1>
     <button onclick="fetchShowtimes('showtime_AMC Village Crossing 18.json')">AMC Village Crossing 18</button>
     <button onclick="fetchShowtimes('showtime_AMC Evanston 12.json')">AMC Evanston 12</button>
+    <button onclick="fetchShowtimes('showtime_AMC River East 21.json')">AMC River East 21</button>
 <!--    <button onclick="fetchShowtimes('showtime_AMC Parkway Pointe 15.json')">Parkway Pointe 15</button>-->
     <div id="showtimes-container"></div>
 
