--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: rgba(255, 255, 255, 0.2); /* Adjust transparency for readability */
+            background: rgba(255, 255, 255, 0.5); /* Adjust transparency for readability */
             z-index: -1;
         }
         .movies {
@@ -29,12 +29,15 @@
             gap: 10px;
         }
         .movie {
-            padding: 10px;
-            border-radius: 5px;
+            background: rgba(255, 255, 255, 0.9); /* White background with slight transparency */
+            padding: 15px;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Light shadow for contrast */
+            transition: background-color 0.3s ease;
         }
         .showtimes {
-            font-size: 0.8rem;
-            color: #666;
+            font-size: 0.85rem;
+            color: #333;
         }
         /* Color coding for the number of showings */
         .shows-1 { background-color: rgba(179, 229, 252, 0.5); } /* Cooler color, fewer shows */
@@ -61,7 +64,7 @@
         /* Optional: Add hover effects for better user experience */
         a.movie-link:hover {
             text-decoration: underline; /* Adds underline on hover */
-            color: #333; /* Optional: Slightly darker color on hover */
+            color: #222; /* Optional: Slightly darker color on hover */
         }
 
     </style>
