--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
 </head>
 <body>
     <h1>Movie Showtimes<span id="last-updated" class="last-updated"></span><span id="next-refresh" class="next-refresh"></span></h1>
-    <button onclick="fetchShowtimes('showtime_AMC River East 21.json')">AMC Linscoln Square 13</button>
-    <button onclick="fetchShowtimes('showtime_AMC Village Crossing 18.json')">AMC Empire 25</button>
-    <button onclick="fetchShowtimes('showtime_AMC Evanston 12.json')">AMC Kips Bay 15</button>
+    <button onclick="fetchShowtimes('showtime_AMC River East 21.json')">AMC River East 21</button>
+    <button onclick="fetchShowtimes('showtime_AMC Village Crossing 18.json')">AMC Village Crossing 18</button>
+    <button onclick="fetchShowtimes('showtime_AMC Evanston 12.json')">AMC Evanston 12</button>
 <!--    <button onclick="fetchShowtimes('showtime_AMC Parkway Pointe 15.json')">Parkway Pointe 15</button>-->
     <div id="showtimes-container"></div>
 
